# print-statements-hook

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.py
print_statement_hook/: constants.py  hook.py
tests/: test_hook.py
